--- a/training-vpc.ipynb
+++ b/training-vpc.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "# Setup infrastructure using CloudFormation\n",
-    "with open(\"setup/cfn_sm_vpc.yaml\", \"r\") as f:\n",
+    "with open(\"cfn_sm_vpc.yaml\", \"r\") as f:\n",
     "    template_body = f.read()\n",
     "    \n",
     "create_stack_response = cfn_client.create_stack(\n",
