--- a/training-vpc.ipynb
+++ b/training-vpc.ipynb
@@ -23,7 +23,7 @@
     "- Tear down the infrastructure\n",
     "\n",
     "\n",
-    "**Please make sure the CIDR block in cfn_sm_vpc.yaml does not conflict with your existing VPC. You can also change FSx storage (currently set at 1.2 TB) depending on your data sets**"
+    "**Please make sure the CIDR block in cfn_sm_vpc.yaml does not conflict with your existing VPC.**"
    ]
   },
   {
